--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-calendars": "^1.1311.0",
     "react-native-date-picker": "^5.0.12",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-linear-gradient": "^2.8.3",
