--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-native-calendars": "^1.1311.0",
     "react-native-date-picker": "^5.0.12",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-svg": "^15.11.2",
