--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "toastify-react-native": "^7.2.0",
     "twrnc": "^4.6.1"
   },
   "devDependencies": {
